# Sparky-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/prelude/: mod.rs  sp_error.rs  sparky_logger.rs  window.rs
src/prelude/algebra/: mod.rs  vec2.rs  vec3.rs  vec4.rs
src/prelude/core/: error.rs  game_loop.rs  logger.rs  mod.rs  window.rs
src/prelude/graphics/: buffer.rs  buffer_types.rs  mod.rs  renderer.rs  shader.rs  types.rs  vertex_array.rs  vertex_attribute.rs
testbed/: Cargo.toml
testbed/shaders/: fs.glsl  vs.glsl
testbed/src/: main.rs  tempCodeRunnerFile.rs
