[package]
name = "sparky"
version = "0.2.0"
authors = [""]
edition = "2021"
rust-version = "1.63"
license-file = "LICENSE"
description = "2D & 3D Game Engine"
keywords = ["game", "engine", "2d", "3d", ""]
categories = ["game-engines", "rendering", "games", "graphics", "gui", "hardware-support", "virtualization"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
#homepage = "http://"
#documentation = "http://"
repository = "https://github.com/Jshuk-7/Sparky"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
gl = "0.14.0"
glfw = "0.45.0"
log = "0.4.17"
nalgebra = "0.31.1"
rapier2d = { version = "0.14.0", features = ["debug-render"] }
rapier3d = { version = "0.14.0", features = ["debug-render"] }
thiserror = "1.0.32"
